# roster-to-email

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: deploy.yml
calender/: Dockerfile  main.py  pyproject.toml
infra/: data.tf  ecr.tf  lambda.tf  main.tf  route53.tf
