[tool.poetry]
name = "roster-to-email"
version = "0.1.0"
description = ""
authors = ["Marko Uksanovic <marko.uksanovic1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
selenium = "*"
numpy = "^1.26.4"
icalendar = "^5.0.11"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.34.44"

[tool.poetry.dev-dependencies]
ruff = "^0.1.11"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
indent-width = 4
select = ["E4", "E7", "E9", "F"]
ignore = ['F401']
exclude = ["old"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
